# seedvii-aeon

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: dataset.md
results/summary/: main_table.csv  main_table.md
scripts/: diag_length_leak.py  inspect_raw.py  make_folds_json.py  run_dl_fusion.py  run_dl_lovo.py  run_dl_lovo_segments.py  run_single.py  run_ts.py  summarize_results.py  to_ts.py
src/seedvii/: __init__.py
src/seedvii/data/: __init__.py  aeon_format.py  loader.py  preprocess.py
src/seedvii/eval/: __init__.py  metrics.py  protocols.py
src/seedvii/models/: __init__.py  dl.py  fusion.py  tsc_wrappers.py
src/seedvii/utils/: __init__.py  logging.py  seed.py
tests/: test_loader.py
