[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedvii-aeon"
version = "0.1.0"
description = "Multimodal EEG emotion recognition on SEED-VII with aeon TSC"
authors = [{name = "Fuwen Li"}]
requires-python = ">=3.12"
dependencies = [
    "aeon>=0.11",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "black>=24", "ipykernel>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
